--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,12 @@
 version: '3.4'
 services:
-  weaviate:
-    image: semitechnologies/weaviate:1.21.2
-    ports:
-      - "8080:8080"
-    environment:
-      QUERY_DEFAULTS_LIMIT: 20
-      AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
-      PERSISTENCE_DATA_PATH: "/weaviate-data"
-      DEFAULT_VECTORIZER_MODULE: text2vec-transformers
-      ENABLE_MODULES: text2vec-transformers
-      TRANSFORMERS_INFERENCE_API: http://t2v-transformers:8080
-      CLUSTER_HOSTNAME: 'node1'
-    volumes:
-      - weaviate-data:/weaviate-data
-    networks:
-      - answer-machine_weaviate
-    depends_on:
-      - t2v-transformers
-  t2v-transformers:
-    image: semitechnologies/transformers-inference:sentence-transformers-multi-qa-MiniLM-L6-cos-v1
-    environment:
-      ENABLE_CUDA: 0 # set to 1 to enable
-      # NVIDIA_VISIBLE_DEVICES: all # enable if running with CUDA
-    networks:
-      - answer-machine_weaviate
   answer-machine:
     build:
       dockerfile: Dockerfile
     ports:
-      - "10000:10000"
+      - "10000:5000"
     networks:
-      - answer-machine_weaviate
-    depends_on:
-      - weaviate
-volumes:
-  weaviate-data:
+      - weaviate_weaviate-network
 networks:
-  answer-machine_weaviate:
+  weaviate_weaviate-network:
+    external: true
