Add favicon.ico and update CSS file path in layout.html and home.html; remove filedb service and add documentdb service in docker-compose.yml; change CMD command in Dockerfile.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,5 @@
 version: '3.4'
 services:
-  filedb:
-    image: postgres:15.4
-    container_name: filedb
-    ports:
-      - "5433:5432"
-    env_file:
-      - .env
-    volumes:
-      - ~/ws/filedb:/var/lib/postgresql/data
-    networks:
-      - filedb-network
   answer-machine:
     build:
       dockerfile: Dockerfile
@@ -18,7 +7,9 @@ services:
       - "10000:5000"
     networks:
       - weaviate_weaviate-network
+      - documentdb_documentdb-network
 networks:
   weaviate_weaviate-network:
     external: true
-  filedb-network:
+  documentdb_documentdb-network:
+    external: true
