Add start-dev or start --proxy=edge command to keycloak service, use quay.io/keycloak/keycloak:22.0.4 image, and create keycloakdb service.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,11 @@ services:
     networks:
       - weaviate_weaviate-network
       - documentdb_documentdb-network
+      - keycloak_keycloak-network
 networks:
   weaviate_weaviate-network:
     external: true
   documentdb_documentdb-network:
+    external: true
+  keycloak_keycloak-network:
     external: true
