Update .gitignore and docker-compose.yml, add nginx.conf and oidc-config.json, remove openid-config.json and keycloak/docker-compose.yml, modify app.py and Dockerfile.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,12 @@ services:
     ports:
       - "10000:5000"
     networks:
+      - answer-machine
       - weaviate_weaviate-network
       - documentdb_documentdb-network
-      - keycloak_keycloak-network
 networks:
+  answer-machine:
   weaviate_weaviate-network:
     external: true
   documentdb_documentdb-network:
-    external: true
-  keycloak_keycloak-network:
     external: true
