Add Category model and implement category selection functionality in chat and documents pages, and add category creation functionality.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "10000:5000"
+    volumes:
+      - ~/ws/olihock/answer-machine-instance-volume:/app/instance
     networks:
       - answer-machine
       - weaviate_weaviate-network
