--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -1,18 +1,9 @@
 version: '3.4'
 services:
   proxy:
-    image: nginx:1.25.2
+    build: .
+    image: nginx
     container_name: nginx
     ports:
       - "80:80"
       - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-#    networks:
-#      - keycloak_keycloak-network
-#      - answer-machine_answer-machine-network
-#networks:
-#  keycloak_keycloak-network:
-#    external: true
-#  answer-machine_answer-machine-network:
-#    external: true
