--- a/documentdb/docker-compose.yml
+++ b/documentdb/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.4'
 services:
   documentdb:
     image: postgres:15.4
+    restart: always
     ports:
       - "5433:5432"
     env_file:
