--- a/keycloak/docker-compose.yml
+++ b/keycloak/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.4'
 services:
   keycloakdb:
     image: postgres:15.4
+    restart: always
     ports:
       - "5432:5432"
     env_file:
@@ -13,6 +14,7 @@ services:
   keycloak:
     image: quay.io/keycloak/keycloak:22.0.4
     container_name: keycloak
+    restart: always
     # https://www.keycloak.org/server/reverseproxy
     command: ${KEYCLOAK_COMMAND}
     ports:
